@@ -8,11 +8,12 @@
 
 package com.cobblemon.mod.common.mixin;
 
-import com.cobblemon.mod.common.cobblemonstructures.CobblemonStructureIDs;
+import com.cobblemon.mod.common.world.CobblemonStructureIDs;
 import net.minecraft.registry.Registry;
 import net.minecraft.structure.PoolStructurePiece;
 import net.minecraft.structure.StructureTemplateManager;
 import net.minecraft.structure.pool.*;
+import net.minecraft.util.Identifier;
 import net.minecraft.util.math.random.Random;
 import net.minecraft.util.shape.VoxelShape;
 import net.minecraft.world.HeightLimitView;
@@ -29,7 +30,6 @@ import org.spongepowered.asm.mixin.injection.ModifyVariable;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Mixin(StructurePoolBasedGenerator.StructurePoolGenerator.class)
 public abstract class StructurePoolGeneratorMixin {
@@ -37,17 +37,35 @@ public abstract class StructurePoolGeneratorMixin {
     @Mutable
     @Shadow Deque<StructurePoolBasedGenerator.ShapedPoolStructurePiece> structurePieces;
 
-    Map<String, Integer> generatedStructureCounts;
+    Map<String, Integer> generatedStructureGroupCounts;
 
     private static final Map<String, Integer> structureMaxes;
+    private static final Map<Identifier, Set<String>> structureGroups = new HashMap<>();
     static {
+        String pokecenter = "pokecenter";
+        String berry = "berry_farm";
+
+        structureGroups.put(CobblemonStructureIDs.PLAINS_POKECENTER, Set.of(pokecenter));
+        structureGroups.put(CobblemonStructureIDs.DESERT_POKECENTER, Set.of(pokecenter));
+        structureGroups.put(CobblemonStructureIDs.SAVANNA_POKECENTER, Set.of(pokecenter));
+        structureGroups.put(CobblemonStructureIDs.SNOWY_POKECENTER, Set.of(pokecenter));
+        structureGroups.put(CobblemonStructureIDs.TAIGA_POKECENTER, Set.of(pokecenter));
+
+        structureGroups.put(CobblemonStructureIDs.SAVANNA_BERRY_SMALL, Set.of(berry));
+        structureGroups.put(CobblemonStructureIDs.SAVANNA_BERRY_LARGE, Set.of(berry));
+        structureGroups.put(CobblemonStructureIDs.PLAINS_BERRY_SMALL, Set.of(berry));
+        structureGroups.put(CobblemonStructureIDs.PLAINS_BERRY_LARGE, Set.of(berry));
+        structureGroups.put(CobblemonStructureIDs.SNOWY_BERRY_SMALL, Set.of(berry));
+        structureGroups.put(CobblemonStructureIDs.SNOWY_BERRY_LARGE, Set.of(berry));
+        structureGroups.put(CobblemonStructureIDs.DESERT_BERRY_SMALL, Set.of(berry));
+        structureGroups.put(CobblemonStructureIDs.DESERT_BERRY_LARGE, Set.of(berry));
+        structureGroups.put(CobblemonStructureIDs.TAIGA_BERRY_SMALL, Set.of(berry));
+        structureGroups.put(CobblemonStructureIDs.TAIGA_BERRY_LARGE, Set.of(berry));
+
         //Mapped using location string as key
         Map<String, Integer> aMap = new HashMap<>();
-        aMap.put(CobblemonStructureIDs.PLAINS_POKECENTER, 1);
-        aMap.put(CobblemonStructureIDs.DESERT_POKECENTER, 1);
-        aMap.put(CobblemonStructureIDs.SAVANNA_POKECENTER, 1);
-        aMap.put(CobblemonStructureIDs.SNOWY_POKECENTER, 1);
-        aMap.put(CobblemonStructureIDs.TAIGA_POKECENTER, 1);
+        aMap.put(pokecenter, 1);
+        aMap.put(berry, 2);
 
 //        aMap.put(CobblemonStructureIDs.PLAINS_LONG_PATH, 3);
 //        aMap.put(CobblemonStructureIDs.DESERT_LONG_PATH, 3);
@@ -57,45 +75,49 @@ public abstract class StructurePoolGeneratorMixin {
         structureMaxes = Collections.unmodifiableMap(aMap);
     }
 
+    public Set<String> getGroups(Identifier structureIdentifier) {
+        return structureGroups.getOrDefault(structureIdentifier, Set.of());
+    }
+
+    public boolean hasReachedMaximum(Identifier structureIdentifier) {
+        Set<String> groups = getGroups(structureIdentifier);
+        for (String group : groups) {
+            int count = generatedStructureGroupCounts.getOrDefault(group, 0);
+            if (count >= structureMaxes.getOrDefault(group, Integer.MAX_VALUE)) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
+    public void incrementStructureCount(Identifier structureIdentifier) {
+        Set<String> groups = getGroups(structureIdentifier);
+        for (String group : groups) {
+            generatedStructureGroupCounts.put(group, generatedStructureGroupCounts.getOrDefault(group, 0) + 1);
+        }
+    }
+
     @Inject(method = "<init>", at = @At("RETURN"))
     private void onStructurePoolGeneratorCreation(Registry<StructurePool> registry, int maxSize, ChunkGenerator chunkGenerator, StructureTemplateManager structureTemplateManager, List<? super PoolStructurePiece> children, Random random, CallbackInfo ci) {
-        generatedStructureCounts = new HashMap<>();
+        generatedStructureGroupCounts = new HashMap<>();
     }
 
     @ModifyVariable(method = "generatePiece", at = @At("STORE"), ordinal = 1)
-    private Iterator<StructurePoolElement> reduceStructurePoolELementIterator(Iterator<StructurePoolElement> iterator) {
+    private Iterator<StructurePoolElement> reduceStructurePoolElementIterator(Iterator<StructurePoolElement> iterator) {
         List<StructurePoolElement> reducedList = new ArrayList<>();
 
         while (iterator.hasNext()) {
             StructurePoolElement structure = iterator.next();
-            String structurePieceLocationKey = getCobblemonOnlyLocation(structure);
+            Identifier structurePieceLocationKey = getCobblemonOnlyLocation(structure);
             if (structurePieceLocationKey == null) {
                 reducedList.add(structure);
                 continue;
             }
 
-            Integer currentlyPlacedCount = generatedStructureCounts.get(structurePieceLocationKey);
-            if (currentlyPlacedCount == null) currentlyPlacedCount = 0;
-
-            Integer maxAllowed = structureMaxes.get(structurePieceLocationKey);
-            if (maxAllowed == null) {
-                reducedList.add(structure);
-                continue;
-            }
-
-            if (currentlyPlacedCount < maxAllowed) {
+            if (!hasReachedMaximum(structurePieceLocationKey)) {
                 reducedList.add(structure);
             }
-        }
-
-        for (String maxStructureLocationKey : structureMaxes.keySet()) {
-            Integer maxAllowed = structureMaxes.get(maxStructureLocationKey);
-
-            Integer currentlyGenerated = generatedStructureCounts.get(maxStructureLocationKey);
-            if (currentlyGenerated == null) currentlyGenerated = 0;
-
-            Integer allowedInstances = maxAllowed - currentlyGenerated;
-            reducedList = removeInstanceOfLocationKeyFrom(reducedList, allowedInstances, maxStructureLocationKey);
         }
 
         return reducedList.iterator();
@@ -103,97 +125,93 @@ public abstract class StructurePoolGeneratorMixin {
 
     @ModifyVariable(method = "generatePiece", at = @At("STORE"), ordinal = 1)
     private PoolStructurePiece injected(PoolStructurePiece poolStructurePiece) {
-        String structureLocationKey = getCobblemonOnlyLocation(poolStructurePiece.getPoolElement());
+        Identifier structureLocationKey = getCobblemonOnlyLocation(poolStructurePiece.getPoolElement());
         if (structureLocationKey != null) {
-            Integer currentlyGenerated = generatedStructureCounts.get(structureLocationKey);
-            if (currentlyGenerated == null) currentlyGenerated = 0;
-            generatedStructureCounts.put(structureLocationKey, currentlyGenerated + 1);
+            incrementStructureCount(structureLocationKey);
         }
-
         return poolStructurePiece;
     }
 
+    // This doesn't SEEM necessary? It appears to work without.
     @Inject(method = "generatePiece", at = @At("HEAD"))
     private void beforeGeneratePiece(PoolStructurePiece piece, MutableObject<VoxelShape> pieceShape, int minY, boolean modifyBoundingBox, HeightLimitView world, NoiseConfig noiseConfig, CallbackInfo ci) {
-        String structureLocationKey = getCobblemonOnlyLocation(piece.getPoolElement());
-
-        if (structureLocationKey != null && structureLocationKey.equals("cobblemon:village_snowy/village_snowy_pokecenter")) System.out.println("Before Counts" + generatedStructureCounts);
-
-        if (structureLocationKey != null) {
-            Integer currentlyGenerated = generatedStructureCounts.get(structureLocationKey);
-            if (currentlyGenerated == null) currentlyGenerated = 0;
-            generatedStructureCounts.put(structureLocationKey, currentlyGenerated + 1);
-        }
-
-        List<StructurePoolBasedGenerator.ShapedPoolStructurePiece> reducedStructurePiecesList = structurePieces.stream().toList();
-
-        for (String maxStructureLocationKey : structureMaxes.keySet()) {
-            Integer maxAllowed = structureMaxes.get(maxStructureLocationKey);
-
-            Integer currentlyGenerated = generatedStructureCounts.get(maxStructureLocationKey);
-            if (currentlyGenerated == null) currentlyGenerated = 0;
-            if (currentlyGenerated < maxAllowed) {
-                continue;
-            }
-
-            //Already have max so need to remove
-            reducedStructurePiecesList = reducedStructurePiecesList.stream()
-                    .filter(shapedStructurePiece -> {
-                        String locationKey = getCobblemonOnlyLocation(shapedStructurePiece.piece.getPoolElement());
-                        if (locationKey == null) {
-                            return true;
-                        }
-
-                        return !locationKey.equals(maxStructureLocationKey);
-                    })
-                    .collect(Collectors.toList());
-        }
-
-        structurePieces = new ArrayDeque<>(reducedStructurePiecesList);
+//        Identifier structureLocationKey = getCobblemonOnlyLocation(piece.getPoolElement());
+//
+//        if (structureLocationKey != null) {
+//            Integer currentlyGenerated = generatedStructureCounts.get(structureLocationKey);
+//            if (currentlyGenerated == null) currentlyGenerated = 0;
+//            generatedStructureCounts.put(structureLocationKey, currentlyGenerated + 1);
+//        }
+//
+//        List<StructurePoolBasedGenerator.ShapedPoolStructurePiece> reducedStructurePiecesList = structurePieces.stream().toList();
+//
+//        for (Identifier maxStructureLocationKey : structureMaxes.keySet()) {
+//            Integer maxAllowed = structureMaxes.get(maxStructureLocationKey);
+//
+//            Integer currentlyGenerated = generatedStructureCounts.get(maxStructureLocationKey);
+//            if (currentlyGenerated == null) currentlyGenerated = 0;
+//            if (currentlyGenerated < maxAllowed) {
+//                continue;
+//            }
+//
+//            //Already have max so need to remove
+//            reducedStructurePiecesList = reducedStructurePiecesList.stream()
+//                    .filter(shapedStructurePiece -> {
+//                        Identifier locationKey = getCobblemonOnlyLocation(shapedStructurePiece.piece.getPoolElement());
+//                        if (locationKey == null) {
+//                            return true;
+//                        }
+//
+//                        return !locationKey.equals(maxStructureLocationKey);
+//                    })
+//                    .collect(Collectors.toList());
+//        }
+//
+//        structurePieces = new ArrayDeque<>(reducedStructurePiecesList);
     }
 
-    private static String getCobblemonOnlyLocation(StructurePoolElement structurePoolElement) {
-        String location = getLocationIfAvailable(structurePoolElement);
+    private static Identifier getCobblemonOnlyLocation(StructurePoolElement structurePoolElement) {
+        Identifier location = getLocationIfAvailable(structurePoolElement);
         if (location == null) return null;
 
-        if (!location.contains("cobblemon")) return null;
+        if (!location.getNamespace().equals("cobblemon")) return null;
 
         return location;
     }
 
-    private static String getLocationIfAvailable(StructurePoolElement structurePoolElement) {
+    private static Identifier getLocationIfAvailable(StructurePoolElement structurePoolElement) {
         if (structurePoolElement instanceof LegacySinglePoolElement legacySinglePoolElement) {
             if (legacySinglePoolElement.location.left().isEmpty()) return null;
 
-            return legacySinglePoolElement.location.left().get().toString();
+            return legacySinglePoolElement.location.left().get();
         } else if (structurePoolElement instanceof SinglePoolElement singlePoolElement) {
             if (singlePoolElement.location.left().isEmpty()) return null;
 
-            return singlePoolElement.location.left().get().toString();
+            return singlePoolElement.location.left().get();
         } else {
             return null;
         }
     }
 
-    private List<StructurePoolElement> removeInstanceOfLocationKeyFrom(List<StructurePoolElement> structureList, Integer allowedNumberOfInstances, String locationKey) {
-        List<StructurePoolElement> reducedList = new ArrayList<>();
-        int instancesFound = 0;
-
-        for (StructurePoolElement structurePoolElement: structureList) {
-            String structureKey = getCobblemonOnlyLocation(structurePoolElement);
-            if (structureKey == null || !structureKey.equals(locationKey)) {
-                reducedList.add(structurePoolElement);
-                continue;
-            }
-
-            if (instancesFound >= allowedNumberOfInstances) {
-                continue;
-            }
-
-            reducedList.add(structurePoolElement);
-            instancesFound++;
-        }
-
-        return  reducedList;
-    }
+//    private List<StructurePoolElement> removeInstanceOfLocationKeyFrom(List<StructurePoolElement> structureList, Integer allowedNumberOfInstances, Identifier locationKey) {
+//        List<StructurePoolElement> reducedList = new ArrayList<>();
+//        int instancesFound = 0;
+//
+//        for (StructurePoolElement structurePoolElement: structureList) {
+//            Identifier structureKey = getCobblemonOnlyLocation(structurePoolElement);
+//            if (structureKey == null || !structureKey.equals(locationKey)) {
+//                reducedList.add(structurePoolElement);
+//                continue;
+//            }
+//
+//            if (instancesFound >= allowedNumberOfInstances) {
+//                continue;
+//            }
+//
+//            reducedList.add(structurePoolElement);
+//            instancesFound++;
+//        }
+//
+//        return  reducedList;
+//    }
 }
